--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "core-js": "^3.3.2",
     "element-ui": "^2.12.0",
+    "iview": "^3.5.3",
+    "jquery": "^3.4.1",
     "vant": "^2.2.13",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
@@ -19,6 +21,7 @@
     "@vue/cli-plugin-eslint": "^4.0.0",
     "@vue/cli-service": "^4.0.0",
     "babel-eslint": "^10.0.3",
+    "babel-plugin-import": "^1.12.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "vue-template-compiler": "^2.6.10"
