--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.3.2",
+    "axios": "^0.19.0",
     "element-ui": "^2.12.0",
     "iview": "^3.5.3",
     "jquery": "^3.4.1",
     "vant": "^2.2.13",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "weixin-js-sdk": "^1.4.0-test"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
