--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "aoyou",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -51,5 +50,10 @@
   "browserslist": [
     "> 1%",
     "last 2 versions"
-  ]
+  ],
+  "description": "## Project setup ``` npm install ```",
+  "main": "babel.config.js",
+  "author": "",
+  "license": "ISC",
+  "version": "1.0.0"
 }
